--- a/src/Challenge.iOS/Challenge.iOS.csproj
+++ b/src/Challenge.iOS/Challenge.iOS.csproj
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
+<PropertyGroup>
 		<TargetFramework>net6.0-ios</TargetFramework>
 		<AssemblyName>Challenge.iOS</AssemblyName>
 		<RootNamespace>Challenge.iOS</RootNamespace>
@@ -9,13 +9,16 @@
 		<SupportedOSPlatformVersion>15.0</SupportedOSPlatformVersion>
 		<UseMauiEssentials>true</UseMauiEssentials>
 	</PropertyGroup>
-
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-	  <CreatePackage>false</CreatePackage>
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-	  <CreatePackage>false</CreatePackage>
-	</PropertyGroup>
+<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+  <CreatePackage>false</CreatePackage>
+  <WarningLevel>4</WarningLevel>
+  <CodesignProvision></CodesignProvision>
+  <CodesignKey>iPhone Developer</CodesignKey>
+  <MtouchDebug>true</MtouchDebug>
+</PropertyGroup>
+<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <CreatePackage>false</CreatePackage>
+</PropertyGroup>
     <ItemGroup>
         <PackageReference Include="MvvmCross" Version="9.0.9" />
         <PackageReference Include="Serilog.Sinks.Xamarin" Version="1.0.0" />
@@ -26,5 +29,12 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Challenge.Core\Challenge.Core.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <InterfaceDefinition Remove="LaunchScreen.storyboard" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Views\" />
     </ItemGroup>
 </Project>
